--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -23,17 +23,28 @@
         <span class="fa fa-search"></span>
     </div>
 </div>
-
+<div class="base">
+    <span>资源总量：{$base.All_Doc}</span>
+    <span>最近7天的新资源数量：{$base.New_Doc}</span>
+    <!-- <span>子帖总量：{$base.All_Items}</span>
+    <span>追加总量：{$base.All_Comment}</span> -->
+</div>
 <div class="article">
     <ul class="wraper">
         <li ng-repeat="lst in list | filter:search">
             <a href="{{ lst.link }}">
             <h2>{{lst.title}}</h2>
-            <div class="listDescription">{{lst.description}}</div>
-            </a>
             <div class="listDetail">
                 <span class="fa fa-pencil-square-o"></span><i>{{lst.username}}</i>
                 <span class="fa fa-calendar-o ng-binding"></span><i>{{lst.time}}</i>
+            </div>
+            <div class="listDescription">{{lst.description}}</div>
+            </a>
+            <div class="listDetail">
+                <small>栏目:{{ lst.items }}</small>
+                <small>补充:{{ lst.comments }} @ {{ lst.new_time }}</small>
+                <!-- <small>最新时间:{{ lst.new_time }}</small> -->
+                <!-- <span class="fa fa-calendar-o ng-binding"></span><i>{{lst.time}}</i> -->
             </div>
         </li>
     </ul>
@@ -55,6 +66,9 @@ app.controller('ListCtrl',function($scope){
         description : '{$ls.description}',
         username : '{$ls.username}',
         time : '{$ls.time|date="Y-m-d H:i:s",###}',
+        items : '{$ls.items}',
+        comments : '{$ls.comments}',
+        new_time : '{$ls.new_time|date="Y.m.d H:i",###}',
         link : "{:U('detail',array('id'=>$ls['_id']))}"
     });
     </volist>
